--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -6,22 +6,19 @@ FROM archlinux:latest AS wasmcarts-dev
 # ===============
 
 RUN pacman -Syu --noconfirm && \
-    pacman -Syu --noconfirm ca-certificates curl make cmake
+    pacman -Syu --noconfirm ca-certificates curl make cmake git
 
-# Download WASM3 source code
-RUN set -e; \
-    cd /opt; \
-    curl -L -o wasm3.tar.gz https://github.com/wasm3/wasm3/archive/refs/tags/v0.5.0.tar.gz; \
-    tar -xzvf wasm3.tar.gz; \
-    rm wasm3.tar.gz
+# =============
+# LINUX SETUP
+# =============
+
+RUN pacman -Syu --noconfirm gcc pkg-config sdl3
 
 # ===================
 # NINTENDO DS SETUP
 # ===================
 
-# Set locale for iconv, used by ndstool
-ENV LANG=C.UTF-8
-ENV LC_ALL=C.UTF-8
+# Set up BlocksDS (https://blocksds.skylyrac.net/docs/setup/options/linux/)
 
 RUN mkdir -p /opt/wonderful/
 ADD https://wonderful.asie.pl/bootstrap/wf-bootstrap-x86_64.tar.gz /opt/wonderful/
@@ -37,7 +34,6 @@ ENV PATH=/opt/wonderful/bin:$PATH
 RUN cd etc && \
     ln -sf ../proc/self/mounts mtab
 
-# Install SDK, then clear the package cache
 RUN wf-pacman -Syu --noconfirm && \
     wf-pacman -Syu --noconfirm wf-tools && \
     wf-config repo enable blocksds && \
@@ -49,32 +45,9 @@ ENV BLOCKSDS=/opt/wonderful/thirdparty/blocksds/core
 ENV BLOCKSDSEXT=/opt/wonderful/thirdparty/blocksds/external
 ENV WONDERFUL_TOOLCHAIN=/opt/wonderful
 
-# Build WASM3 for NDS with Wonderful Toolchain
-RUN set -e; \
-    cd /opt/wasm3-0.5.0/source/; \
-    $WONDERFUL_TOOLCHAIN/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-gcc -O3 -c *.c; \
-    $WONDERFUL_TOOLCHAIN/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-ld -r -o libwasm3.a *.o; \
-    mkdir -p $BLOCKSDSEXT/wasm3/lib; \
-    mkdir -p $BLOCKSDSEXT/wasm3/include; \
-    find . -name '*.h' -exec cp --parents {} $BLOCKSDSEXT/wasm3/include \;; \
-    mv libwasm3.a $BLOCKSDSEXT/wasm3/lib/
-
-# =============
-# LINUX SETUP
-# =============
-
-# Install required packages
-RUN pacman -Syu --noconfirm gcc pkg-config sdl3
-
-# Build WASM3 for Linux
-RUN set -e; \
-    cd /opt/wasm3-0.5.0/source/; \
-    gcc -O3 -c *.c; \
-    ld -r -o libwasm3.a *.o; \
-    mkdir -p /usr/local/lib; \
-    mkdir -p /usr/local/include; \
-    find . -name '*.h' -exec cp --parents {} /usr/local/include \;; \
-    mv libwasm3.a /usr/local/lib/
+# Set locale for iconv, used by ndstool
+ENV LANG=C.UTF-8
+ENV LC_ALL=C.UTF-8
 
 # =================
 # DEVKITPRO SETUP
@@ -88,7 +61,9 @@ ENV DEVKITPPC=/opt/devkitpro/devkitPPC
 
 # Set up DevKitPro repos on Pacman
 RUN pacman-key --init && \
-    pacman-key --recv BC26F752D25B92CE272E0F44F7FD5492264BB9D0 --keyserver keyserver.ubuntu.com && \
+    pacman-key --populate archlinux
+# RUN pacman-key --recv BC26F752D25B92CE272E0F44F7FD5492264BB9D0 --keyserver keys.openpgp.org # Broken
+RUN curl -sS "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xbc26f752d25b92ce272e0f44f7fd5492264bb9d0" | pacman-key --add - && \
     pacman-key --lsign BC26F752D25B92CE272E0F44F7FD5492264BB9D0 && \
     pacman -U https://pkg.devkitpro.org/devkitpro-keyring.pkg.tar.zst --noconfirm && \
     pacman-key --populate devkitpro
@@ -121,16 +96,6 @@ RUN set -e; \
     # Places the headers in $DEVKITPRO/portlibs/gamecube/include/
     # Places the binaries in $DEVKITPRO/portlibs/gamecube/lib/
     make PLATFORM=cube -C GRRLIB clean all install
-
-# Build WASM3 for PowerPC-EABI architecture
-RUN set -e; \
-    cd /opt/wasm3-0.5.0/source/; \
-    $DEVKITPPC/bin/powerpc-eabi-gcc -O3 -c *.c; \
-    $DEVKITPPC/bin/powerpc-eabi-ld -r -o libwasm3.a *.o; \
-    mkdir -p $DEVKITPPC/local/wasm3/lib; \
-    mkdir -p $DEVKITPPC/local/wasm3/include; \
-    find . -name '*.h' -exec cp --parents {} $DEVKITPPC/local/wasm3/include \;; \
-    mv libwasm3.a $DEVKITPPC/local/wasm3/lib/
 
 WORKDIR /work/
 
